Added the (slightly reorganized) bindings by David Cuadrado. Added the dependency of Rust. Added some brief installation instructions.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,63 @@
 * text=auto !eol
+bin/configure_bindings.rb -text
+doc/installation-bindings.txt -text
+doc/installation-gecode.txt -text
+doc/installation.txt -text
+lib/bindings.rb -text
+lib/bindings/bindings.rb -text
+src/cpp/missing.cpp -text
+src/cpp/missing.h -text
+src/cpp/vararray.cpp -text
+src/cpp/vararray.h -text
+vendor/rust/README -text
+vendor/rust/bin/cxxgenerator.rb -text
+vendor/rust/include/rust_checks.hh -text
+vendor/rust/include/rust_conversions.hh -text
+vendor/rust/rust.rb -text
+vendor/rust/rust/attribute.rb -text
+vendor/rust/rust/bindings.rb -text
+vendor/rust/rust/class.rb -text
+vendor/rust/rust/constants.rb -text
+vendor/rust/rust/container.rb -text
+vendor/rust/rust/cppifaceparser.rb -text
+vendor/rust/rust/cwrapper.rb -text
+vendor/rust/rust/cxxclass.rb -text
+vendor/rust/rust/element.rb -text
+vendor/rust/rust/enum.rb -text
+vendor/rust/rust/function.rb -text
+vendor/rust/rust/namespace.rb -text
+vendor/rust/rust/templates/AttributeDefinition.rusttpl -text
+vendor/rust/rust/templates/AttributeInitBinding.rusttpl -text
+vendor/rust/rust/templates/BindingsHeader.rusttpl -text
+vendor/rust/rust/templates/BindingsUnit.rusttpl -text
+vendor/rust/rust/templates/CWrapperClassDefinitions.rusttpl -text
+vendor/rust/rust/templates/ClassDeclarations.rusttpl -text
+vendor/rust/rust/templates/ClassInitialize.rusttpl -text
+vendor/rust/rust/templates/ConstructorStub.rusttpl -text
+vendor/rust/rust/templates/CxxClassDefinitions.rusttpl -text
+vendor/rust/rust/templates/CxxMethodStub.rusttpl -text
+vendor/rust/rust/templates/CxxStandaloneClassDefinitions.rusttpl -text
+vendor/rust/rust/templates/EnumDeclarations.rusttpl -text
+vendor/rust/rust/templates/EnumDefinitions.rusttpl -text
+vendor/rust/rust/templates/FunctionDefinition.rusttpl -text
+vendor/rust/rust/templates/FunctionInitAlias.rusttpl -text
+vendor/rust/rust/templates/FunctionInitBinding.rusttpl -text
+vendor/rust/rust/templates/MethodInitBinding.rusttpl -text
+vendor/rust/rust/templates/ModuleDeclarations.rusttpl -text
+vendor/rust/rust/templates/ModuleDefinitions.rusttpl -text
+vendor/rust/rust/templates/StandaloneClassDeclarations.rusttpl -text
+vendor/rust/rust/templates/VariableFunctionCall.rusttpl -text
+vendor/rust/rust/type.rb -text
+vendor/rust/test/Makefile -text
+vendor/rust/test/constants.rb -text
+vendor/rust/test/cppclass.cc -text
+vendor/rust/test/cppclass.hh -text
+vendor/rust/test/cppclass.rb -text
+vendor/rust/test/cwrapper.c -text
+vendor/rust/test/cwrapper.h -text
+vendor/rust/test/cwrapper.rb -text
+vendor/rust/test/dummyclass.hh -text
+vendor/rust/test/lib/extension-test.rb -text
+vendor/rust/test/test-constants.rb -text
+vendor/rust/test/test-cppclass.rb -text
+vendor/rust/test/test-cwrapper.rb -text
