Moved lib/bindings.rb to lib/gecoder.rb , the file should be the only one that one has to require to load the library. Added a helper for examples to load what's needed.

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,13 +4,14 @@
 doc/installation-bindings.txt -text
 doc/installation-gecode.txt -text
 doc/installation.txt -text
+example/example_helper.rb -text
 ext/extconf.rb -text
 ext/missing.cpp -text
 ext/missing.h -text
 ext/vararray.cpp -text
 ext/vararray.h -text
-lib/bindings.rb -text
 lib/bindings/bindings.rb -text
+lib/gecoder.rb -text
 tasks/all_tasks.rb -text
 tasks/distribution.rake -text
 vendor/rust/README -text
