Added a part to the interface which allows the variables to be independent of the space they are used in.

--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,9 @@ ext/vararray.cpp -text
 ext/vararray.h -text
 lib/bindings/bindings.rb -text
 lib/gecoder.rb -text
+lib/interface/binding_changes.rb -text
+specs/space.rb -text
+specs/spec_helper.rb -text
 tasks/all_tasks.rb -text
 tasks/distribution.rake -text
 vendor/rust/README -text
