Added Model#solution . Some changes to how the store works had to be made for it to survive the copying of Space. The current version is not especially good from a performance point of view, but once moved to the bindings it will be possible to use a better growing-strategy.

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,7 +12,9 @@ lib/bindings/bindings.rb -text
 lib/gecoder.rb -text
 lib/interface/binding_changes.rb -text
 lib/interface/model.rb -text
+lib/interface/search.rb -text
 specs/model.rb -text
+specs/search.rb -text
 specs/space.rb -text
 specs/spec_helper.rb -text
 tasks/all_tasks.rb -text
