Added relation constraints with constant integers.

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,8 +12,10 @@ lib/bindings/bindings.rb -text
 lib/gecoder.rb -text
 lib/interface/binding_changes.rb -text
 lib/interface/model.rb -text
+lib/interface/relation_constraints.rb -text
 lib/interface/search.rb -text
 specs/model.rb -text
+specs/relation_constraints.rb -text
 specs/search.rb -text
 specs/space.rb -text
 specs/spec_helper.rb -text
