--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,7 @@ lib/gecoder/bindings/bindings.rb -text
 lib/gecoder/interface.rb -text
 lib/gecoder/interface/binding_changes.rb -text
 lib/gecoder/interface/constraints.rb -text
+lib/gecoder/interface/constraints/relation.rb -text
 lib/gecoder/interface/constraints/relation_constraints.rb -text
 lib/gecoder/interface/model.rb -text
 lib/gecoder/interface/search.rb -text
