Refactored the specs a bit, putting the variable specs in their own file and adding a custom matcher for testing a varible's domain.

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,7 @@ lib/gecoder/interface/constraints.rb -text
 lib/gecoder/interface/constraints/relation.rb -text
 lib/gecoder/interface/model.rb -text
 lib/gecoder/interface/search.rb -text
+specs/int_var.rb -text
 specs/model.rb -text
 specs/relation_constraints.rb -text
 specs/search.rb -text
