--- a/.gitattributes
+++ b/.gitattributes
@@ -14,11 +14,15 @@ lib/gecoder/bindings/bindings.rb -text
 lib/gecoder/interface.rb -text
 lib/gecoder/interface/binding_changes.rb -text
 lib/gecoder/interface/constraints.rb -text
+lib/gecoder/interface/constraints/distinct.rb -text
 lib/gecoder/interface/constraints/relation.rb -text
+lib/gecoder/interface/enum_wrapper.rb -text
 lib/gecoder/interface/model.rb -text
 lib/gecoder/interface/search.rb -text
 specs/binding_changes.rb -text
+specs/constraints/distinct.rb -text
 specs/constraints/relation.rb -text
+specs/enum_wrapper.rb -text
 specs/int_var.rb -text
 specs/model.rb -text
 specs/search.rb -text
