--- a/.gitattributes
+++ b/.gitattributes
@@ -16,6 +16,7 @@ lib/gecoder/interface/binding_changes.rb -text
 lib/gecoder/interface/branch.rb -text
 lib/gecoder/interface/constraints.rb -text
 lib/gecoder/interface/constraints/distinct.rb -text
+lib/gecoder/interface/constraints/linear.rb -text
 lib/gecoder/interface/constraints/relation.rb -text
 lib/gecoder/interface/enum_wrapper.rb -text
 lib/gecoder/interface/model.rb -text
@@ -23,6 +24,7 @@ lib/gecoder/interface/search.rb -text
 specs/binding_changes.rb -text
 specs/branch.rb -text
 specs/constraints/distinct.rb -text
+specs/constraints/linear.rb -text
 specs/constraints/relation.rb -text
 specs/enum_wrapper.rb -text
 specs/int_var.rb -text
