--- a/.gitattributes
+++ b/.gitattributes
@@ -43,6 +43,7 @@ tasks/all_tasks.rb -text
 tasks/distribution.rake -text
 tasks/rcov.rake -text
 tasks/specs.rake -text
+tasks/website.rake -text
 vendor/rust/README -text
 vendor/rust/bin/cxxgenerator.rb -text
 vendor/rust/include/rust_checks.hh -text
