Added a short introduction (which can be vastly improved).

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@ doc/config.yaml -text
 doc/metainfo.yaml -text
 doc/src/default.css -text
 doc/src/default.template -text
+doc/src/documentation.page -text
 doc/src/index.page -text
 doc/src/installation.page -text
 example/example_helper.rb -text
