Added the send+more=money example.

--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@ doc/metainfo.yaml -text
 doc/src/default.css -text
 doc/src/default.template -text
 doc/src/documentation.page -text
+doc/src/examples.page -text
 doc/src/index.page -text
 doc/src/installation.page -text
 example/example_helper.rb -text
