--- a/doc/src/default.template
+++ b/doc/src/default.template
@@ -18,5 +18,12 @@
       {menu: {menuStyle: horizontal, options: {startLevel: 2, maxLevels: 1, divClass: "submenu horizontal", selectedMenuitemClass: "selected"}}}
     </div>
   </div>
+  
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-546645-2";
+urchinTracker();
+</script>
 </body>
 </html>
