Added n-queens (without symmetry breaking) as an example.

--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,7 @@ doc/src/examples.page -text
 doc/src/index.page -text
 doc/src/installation.page -text
 example/example_helper.rb -text
+example/queens.rb -text
 example/raw_bindings.rb -text
 example/send_more_money.rb -text
 ext/extconf.rb -text
