--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@ doc/src/default.css -text
 doc/src/default.template -text
 doc/src/documentation/constraints.page -text
 doc/src/documentation/index.page -text
+doc/src/documentation/modelling.page -text
 doc/src/examples.page -text
 doc/src/index.page -text
 doc/src/installation.page -text
