<ruby>...</ruby> can now be used to highlight Ruby code thanks to RSpec's webgen plugin. Added syntax highlighting to the examples.

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,8 @@
 doc/config.yaml -text
 doc/metainfo.yaml -text
 doc/plugin/googlesitemap.rb -text
+doc/plugin/rspec_content.rb -text
+doc/plugin/syntax.rb -text
 doc/src/default.css -text
 doc/src/default.template -text
 doc/src/documentation/constraints.page -text
