--- a/.gitattributes
+++ b/.gitattributes
@@ -65,6 +65,7 @@ specs/constraints/equality.rb -text
 specs/constraints/linear.rb -text
 specs/constraints/reification_sugar.rb -text
 specs/constraints/relation.rb -text
+specs/enum_matrix.rb -text
 specs/enum_wrapper.rb -text
 specs/int_var.rb -text
 specs/model.rb -text
