--- a/.gitattributes
+++ b/.gitattributes
@@ -37,6 +37,7 @@ lib/gecoder/interface/branch.rb -text
 lib/gecoder/interface/constraints.rb -text
 lib/gecoder/interface/constraints/bool/boolean.rb -text
 lib/gecoder/interface/constraints/bool_var_constraints.rb -text
+lib/gecoder/interface/constraints/int/arithmetic.rb -text
 lib/gecoder/interface/constraints/int/domain.rb -text
 lib/gecoder/interface/constraints/int/linear.rb -text
 lib/gecoder/interface/constraints/int_enum/arithmetic.rb -text
