--- a/.gitattributes
+++ b/.gitattributes
@@ -14,7 +14,10 @@ doc/src/default.template -text
 doc/src/documentation/constraints.page -text
 doc/src/documentation/index.page -text
 doc/src/documentation/modelling.page -text
-doc/src/examples.page -text
+doc/src/examples/index.page -text
+doc/src/examples/n-queens.page -text
+doc/src/examples/send-more-money.page -text
+doc/src/examples/sudoku.page -text
 doc/src/index.page -text
 doc/src/installation.page -text
 doc/src/map.sitemap -text
