--- a/doc/src/default.template
+++ b/doc/src/default.template
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{lang:}">
 <head>
-  <title>Gecode/R: {title: }</title>
+  <title>{long_title: }</title>
   <link rel="stylesheet" type="text/css" href="{relocatable: default.css}" media="screen" />
   <link rel="stylesheet" type="text/css" href="{resource: webgen-css}" media="screen" />
   <meta name="description" content="{description:}" />
