Split the constraints page into categories.

--- a/.gitattributes
+++ b/.gitattributes
@@ -11,8 +11,10 @@ doc/plugin/rspec_content.rb -text
 doc/plugin/syntax.rb -text
 doc/src/default.css -text
 doc/src/default.template -text
+doc/src/documentation/boolean-constraints.page -text
 doc/src/documentation/constraints.page -text
 doc/src/documentation/index.page -text
+doc/src/documentation/integer-constraints.page -text
 doc/src/documentation/modelling.page -text
 doc/src/examples/index.page -text
 doc/src/examples/n-queens.page -text
