Added optional logging that logs all Gecode-calls to a file called gecoder.log .

--- a/.gitattributes
+++ b/.gitattributes
@@ -100,6 +100,7 @@ specs/constraints/sort.rb -text
 specs/enum_matrix.rb -text
 specs/enum_wrapper.rb -text
 specs/int_var.rb -text
+specs/logging.rb -text
 specs/model.rb -text
 specs/search.rb -text
 specs/set_var.rb -text
