--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@ doc/src/examples/index.page -text
 doc/src/examples/magic-sequence.page -text
 doc/src/examples/n-queens.page -text
 doc/src/examples/send-more-money.page -text
+doc/src/examples/send-most-money.page -text
 doc/src/examples/sudoku.page -text
 doc/src/features.page -text
 doc/src/index.page -text
