--- a/doc/metainfo.yaml
+++ b/doc/metainfo.yaml
@@ -25,12 +25,14 @@ examples/index.page:
   orderInfo: 10
 examples/send-more-money.page:
   orderInfo: 11
-examples/sudoku.page:
+examples/send-most-money.page:
   orderInfo: 12
-examples/n-queens.page:
+examples/sudoku.page:
   orderInfo: 13
-examples/magic-sequence.page:
+examples/n-queens.page:
   orderInfo: 14
+examples/magic-sequence.page:
+  orderInfo: 15
 ---
 rubyforge.html:
   title: RubyForge
