Added the select set constraint (set array access).

--- a/.gitattributes
+++ b/.gitattributes
@@ -70,6 +70,7 @@ lib/gecoder/interface/constraints/set/domain.rb -text
 lib/gecoder/interface/constraints/set/relation.rb -text
 lib/gecoder/interface/constraints/set_enum/channel.rb -text
 lib/gecoder/interface/constraints/set_enum/distinct.rb -text
+lib/gecoder/interface/constraints/set_enum/selection.rb -text
 lib/gecoder/interface/constraints/set_enum_constraints.rb -text
 lib/gecoder/interface/constraints/set_var_constraints.rb -text
 lib/gecoder/interface/enum_matrix.rb -text
@@ -97,6 +98,7 @@ specs/constraints/int_domain.rb -text
 specs/constraints/int_relation.rb -text
 specs/constraints/linear.rb -text
 specs/constraints/reification_sugar.rb -text
+specs/constraints/selection.rb -text
 specs/constraints/set_domain.rb -text
 specs/constraints/set_relation.rb -text
 specs/constraints/sort.rb -text
