--- a/.gitattributes
+++ b/.gitattributes
@@ -67,6 +67,7 @@ lib/gecoder/interface/constraints/reifiable_constraints.rb -text
 lib/gecoder/interface/constraints/set/cardinality.rb -text
 lib/gecoder/interface/constraints/set/connection.rb -text
 lib/gecoder/interface/constraints/set/domain.rb -text
+lib/gecoder/interface/constraints/set/operation.rb -text
 lib/gecoder/interface/constraints/set/relation.rb -text
 lib/gecoder/interface/constraints/set_enum/channel.rb -text
 lib/gecoder/interface/constraints/set_enum/distinct.rb -text
@@ -100,6 +101,7 @@ specs/constraints/linear.rb -text
 specs/constraints/reification_sugar.rb -text
 specs/constraints/selection.rb -text
 specs/constraints/set_domain.rb -text
+specs/constraints/set_operation.rb -text
 specs/constraints/set_relation.rb -text
 specs/constraints/sort.rb -text
 specs/enum_matrix.rb -text
