Implemented a new graphic design for the website.

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,10 +7,13 @@
 doc/config.yaml -text
 doc/metainfo.yaml -text
 doc/plugin/googlesitemap.rb -text
+doc/plugin/menustyles/breadcrumbs.rb -text
+doc/plugin/menustyles/footer.rb -text
+doc/plugin/menustyles/sidebar.rb -text
+doc/plugin/menustyles/tabs.rb -text
 doc/plugin/quickref.rb -text
 doc/plugin/rspec_content.rb -text
 doc/plugin/syntax.rb -text
-doc/src/default.css -text
 doc/src/default.template -text
 doc/src/documentation/boolean-constraints.page -text
 doc/src/documentation/constraints.page -text
@@ -26,10 +29,18 @@ doc/src/examples/send-most-money.page -text
 doc/src/examples/sudoku-set.page -text
 doc/src/examples/sudoku.page -text
 doc/src/features.page -text
+doc/src/images/background.png -text
+doc/src/images/caption.png -text
+doc/src/images/header-bg.png -text
+doc/src/images/logo.png -text
+doc/src/images/tab-hover.png -text
+doc/src/images/tab-left.png -text
+doc/src/images/tab-right.png -text
 doc/src/index.page -text
 doc/src/installation.page -text
 doc/src/sitemap.page -text
 doc/src/sitemap.sitemap -text
+doc/src/styles.css -text
 example/example_helper.rb -text
 example/magic_sequence.rb -text
 example/queens.rb -text
