--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,7 @@
 /Rakefile -text
 doc/config.yaml -text
 doc/metainfo.yaml -text
+doc/plugin/example.rb -text
 doc/plugin/googlesitemap.rb -text
 doc/plugin/menustyles/breadcrumbs.rb -text
 doc/plugin/menustyles/footer.rb -text
