--- a/.gitattributes
+++ b/.gitattributes
@@ -6,15 +6,15 @@
 /Rakefile -text
 doc/config.yaml -text
 doc/metainfo.yaml -text
-doc/plugin/example.rb -text
 doc/plugin/googlesitemap.rb -text
 doc/plugin/menustyles/breadcrumbs.rb -text
 doc/plugin/menustyles/footer.rb -text
 doc/plugin/menustyles/sidebar.rb -text
 doc/plugin/menustyles/tabs.rb -text
-doc/plugin/quickref.rb -text
 doc/plugin/rspec_content.rb -text
 doc/plugin/syntax.rb -text
+doc/plugin/tags/example.rb -text
+doc/plugin/tags/quickref.rb -text
 doc/src/default.template -text
 doc/src/documentation/boolean-constraints.page -text
 doc/src/documentation/constraints.page -text
