Split the modelling into its own page.

--- a/.gitattributes
+++ b/.gitattributes
@@ -22,6 +22,7 @@ doc/src/documentation/constraints/integer-constraints.page -text
 doc/src/documentation/constraints/quick-reference.page -text
 doc/src/documentation/constraints/set-constraints.page -text
 doc/src/documentation/index.page -text
+doc/src/documentation/modelling.page -text
 doc/src/examples/index.page -text
 doc/src/examples/magic-sequence.page -text
 doc/src/examples/n-queens.page -text
