--- a/.gitattributes
+++ b/.gitattributes
@@ -24,6 +24,7 @@ doc/src/documentation/constraints/index.page -text
 doc/src/documentation/constraints/integer-constraints.page -text
 doc/src/documentation/constraints/quick-reference.page -text
 doc/src/documentation/constraints/set-constraints.page -text
+doc/src/documentation/faq.page -text
 doc/src/documentation/index.page -text
 doc/src/documentation/modelling.page -text
 doc/src/examples/index.page -text
