Added square tiling as an example.

--- a/doc/metainfo.yaml
+++ b/doc/metainfo.yaml
@@ -48,6 +48,8 @@ examples/n-queens.page:
   orderInfo: 15
 examples/magic-sequence.page:
   orderInfo: 16
+examples/square-tiling.page:
+  orderInfo: 17
 ---
 details/rubyforge.html:
   title: RubyForge
