Split the modelling tutorial into one instruction and one tutorial following the instructions.

--- a/doc/metainfo.yaml
+++ b/doc/metainfo.yaml
@@ -18,7 +18,7 @@ documentation/index.page:
   orderInfo: 10
 documentation/faq.page:
   orderInfo: 11
-documentation/modelling.page:
+documentation/modelling:
   orderInfo: 12
 documentation/constraints:
   orderInfo: 13
