--- a/.gitattributes
+++ b/.gitattributes
@@ -27,6 +27,7 @@ doc/src/documentation/constraints/set-constraints.page -text
 doc/src/documentation/faq.page -text
 doc/src/documentation/index.page -text
 doc/src/documentation/modelling/index.page -text
+doc/src/documentation/modelling/square-tiling.page -text
 doc/src/documentation/modelling/sudoku.page -text
 doc/src/examples/index.page -text
 doc/src/examples/magic-sequence.page -text
