Centered the frontpage. Removed Gecode/R from the title.

--- a/doc/src/frontpage.template
+++ b/doc/src/frontpage.template
@@ -10,7 +10,12 @@ template: ~
   <style type="text/css">
 	<!--
     h1 {
-    	white-space: nowrap;
+      white-space: nowrap;
+      text-align: center;
+    }
+    #body {
+      width: 520px;
+      margin: 0 auto;
     }
   -->
   </style>
